objects/Result__c.object
<CustomObject>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to track multi-step deployment overall results.</description>
        <inlineHelpText>Used to track multi-step deployment overall results.</inlineHelpText>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Total time duration of the job. Use this value to track job performance.</description>
        <formula>IF(
  AND(
    NOT(ISBLANK(Start_Time__c)),
    NOT(ISBLANK(End_Time__c))
  ),
  (End_Time__c - Start_Time__c)*24*60*60,
  NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total time duration of the job. Use this value to track job performance.</inlineHelpText>
        <label>Duration (in seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <description>Date time when the job ended.</description>
        <inlineHelpText>Date time when the job ended.</inlineHelpText>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <label>Error Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <description>Unique identifier for the jobs. This is as an External Id for mapping this result with an external job.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier for the jobs. This is as an External Id for mapping this result with an external job.</inlineHelpText>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <label>Job Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>Link to open more information about the results.</description>
        <inlineHelpText>Link to open more information about the results.</inlineHelpText>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to track job results triggered from promotion events.</description>
        <inlineHelpText>Used to track job results triggered from promotion events.</inlineHelpText>
        <label>Promotion</label>
        <referenceTo>Promotion__c</referenceTo>
        <relationshipLabel>Results</relationshipLabel>
        <relationshipName>Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>Date time when the job started.</description>
        <inlineHelpText>Date time when the job started.</inlineHelpText>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Not Started&quot;</defaultValue>
        <description>Current status of the result. Confirms if the result is pending or completed.</description>
        <inlineHelpText>Current status of the result. Confirms if the result is pending or completed.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User story that originated the result.</description>
        <inlineHelpText>User story that originated the result.</inlineHelpText>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>Result</relationshipLabel>
        <relationshipName>Result</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Link__c</columns>
        <columns>Description__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Error_Code__c</columns>
        <columns>Job_Id__c</columns>
        <columns>User_Story__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R{00000}</displayFormat>
        <label>Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>